get firestore data and add to recycler view

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -78,7 +78,7 @@
         android:id="@+id/saveAndRollBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save and Roll Options"
+        android:text="Save and Roll"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
