--- a/app/src/main/res/layout/decisions.xml
+++ b/app/src/main/res/layout/decisions.xml
@@ -15,12 +15,12 @@
         android:text="Example"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/optionDeleteBtn"
+        app:layout_constraintEnd_toStartOf="@+id/reRollBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/optionDeleteBtn"
+        android:id="@+id/reRollBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Roll Decision"
