--- a/app/src/main/res/layout/decisions.xml
+++ b/app/src/main/res/layout/decisions.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Example"
         android:textSize="20sp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/reRollBtn"
         app:layout_constraintStart_toStartOf="parent"
